--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -53,11 +53,11 @@
                     <form class="login-form">
                         <div class="form-group">
                           <label for="exampleInputEmail1">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <input type="email" class="form-control" id="email"  aria-describedby="emailHelp" placeholder="Enter email" name="email">
                         </div>
                         <div class="form-group">
                           <label for="pass">Password</label>
-                          <input type="password" class="form-control" id="pass" placeholder="Password">
+                          <input type="password" class="form-control" id="pass" placeholder="Password" name="password">
                         </div>
                         <button type="submit" class="btn btn-dark">Submit</button>
                     </form>
