--- a/views/create_course/create_course.ejs
+++ b/views/create_course/create_course.ejs
@@ -26,7 +26,7 @@
                         <a href="" class="btn-primary"><i class="fas fa-bell"></i></a>
                     </li>
                     <li>
-                        <a href="/home" class="n-btn"> Logout </a>
+                        <a href="/logout" class="n-btn"> Logout </a>
                     </li>
                 </ul>
             </nav>
