--- a/views/notice/notice.ejs
+++ b/views/notice/notice.ejs
@@ -19,25 +19,37 @@
 
             <ul>
                 <li>
-                    <a href="/home" class="active"> Home </a>
+                    <i class="fas fa-users"></i> <a href="/dashbord">Profile</a>
                 </li>
                 <li>
-                    <a href="#about-us"> About Us</a>
+                    <i class="fas fa-users"></i> <a class="ad-active" href="/create_course">Create Course</a>
                 </li>
                 <li>
-                    <a href="/courses"> Courses</a>
+                    <i class="fas fa-users"></i> <a href="/view_course">View Course</a>
                 </li>
                 <li>
-                    <a href="/notice"> Notice </a>
+                    <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a>
                 </li>
                 <li>
-                    <a href="/contact"> Contact </a>
+
                 </li>
                 <li>
-                    <a href="/login"> Sign In </a>
+                    <i class="fas fa-users"></i> <a href="/student_info">Student Info</a>
                 </li>
                 <li>
-                    <a href="/signup" class="n-btn"> Register </a>
+
+                </li>
+                <li>
+                    <i class="fas fa-users"></i> <a href="/notes_upload">Notes Upload</a>
+                </li>
+                <li>
+                    <i class="fas fa-users"></i> <a href="/notice_upload">Notice Upload</a>
+                </li>
+                <li>
+                    <i class="fas fa-users"></i> <a href="/mark">Create Marks</a>
+                </li>
+                <li>
+                    <i class="fas fa-hands-helping"></i> <a href="/alert_parent">Alert Parents</a>
                 </li>
             </ul>
         </nav>
