--- a/views/signup/teacher_reg.ejs
+++ b/views/signup/teacher_reg.ejs
@@ -81,7 +81,7 @@
                                 <label for="qualification_details">Qualification</label><br>
                                 <textarea name="qualification_details" id="" cols="50" rows="10"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-info"> submit</button>
+                            <input type="submit" value="Submit">
                     </form>
                 </div>
             </div>
