--- a/views/alert_parent/alert_parent.ejs
+++ b/views/alert_parent/alert_parent.ejs
@@ -26,7 +26,7 @@
                         <a href="" class="btn-primary"><i class="fas fa-bell"></i></a>
                     </li>
                     <li>
-                        <a href="index.html" class="n-btn"> Logout </a>
+                        <a href="/logout" class="n-btn"> Logout </a>
                     </li>
                 </ul>
             </nav>
@@ -39,37 +39,37 @@
             <div class="sidebar">
                 <ul>
                     <li>
-                        <i class="fas fa-users"></i> <a href="teacher_dashboard.html">Profile</a>
+                        <i class="fas fa-users"></i> <a href="/dashbord">Profile</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="create_course.html">Create Course</a>
+                        <i class="fas fa-users"></i> <a class="ad-active" href="/create_course">Create Course</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="view_course.html">View Course</a>
+                        <i class="fas fa-users"></i> <a href="/view_course">View Course</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="approve_student.html">Approve Student</a>
-                    </li>
-                    <li>
-
-                    </li>
-                    <li>
-                        <i class="fas fa-users"></i> <a href="student_info.html" >Student Info</a>
+                        <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a>
                     </li>
                     <li>
 
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="notes_upload.html">Notes Upload</a>
+                        <i class="fas fa-users"></i> <a href="/student_info">Student Info</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="notice_upload.html">Notice Upload</a>
+
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="marks_entry.html">Create Marks</a>
+                        <i class="fas fa-users"></i> <a href="/notes_upload">Notes Upload</a>
                     </li>
                     <li>
-                        <i class="fas fa-hands-helping"></i> <a class="ad-active" href="alert_parent.html">Alert Parents</a>
+                        <i class="fas fa-users"></i> <a href="/notice_upload">Notice Upload</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-users"></i> <a href="/mark">Create Marks</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-hands-helping"></i> <a href="/alert_parent">Alert Parents</a>
                     </li>
                 </ul>
             </div>
