--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-5">
-                    <form class="login-form">
+                    <form class="login-form" method="post">
                         <div class="form-group">
                           <label for="exampleInputEmail1">Email address</label>
                           <input type="email" class="form-control" id="email"  aria-describedby="emailHelp" placeholder="Enter email" name="email">
@@ -59,7 +59,7 @@
                           <label for="pass">Password</label>
                           <input type="password" class="form-control" id="pass" placeholder="Password" name="password">
                         </div>
-                        <button type="submit" class="btn btn-dark">Submit</button>
+                        <input type="submit" class="btn btn-dark" namr="login" placeholder="Login">
                     </form>
                 </div>
             </div>
