--- a/views/student_info/student_info.ejs
+++ b/views/student_info/student_info.ejs
@@ -26,7 +26,7 @@
                         <a href="" class="btn-primary"><i class="fas fa-bell"></i></a>
                     </li>
                     <li>
-                        <a href="/logout" class="n-btn"> Logout </a>
+                        <a href="logout" class="n-btn"> Logout </a>
                     </li>
                 </ul>
             </nav>
@@ -78,48 +78,43 @@
                 <div class="container-fluid">
                     <div class="row justify-content-center text-center">
                         <div class="col-lg-8 mb-4 mr-auto">
-                            <h1>Student Marks Entry</h1>
+                            <h1>Student Info</h1>
                         </div>
-                        <div class="col-lg-5">
-                            <form class="form" action="" method="post">
+                        <div class="col-lg-10 mb-4">
+                            <nav class="navbar navbar-light bg-light">
+                                <form class="form-inline ml-auto">
+                                  <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                                </form>
+                              </nav>
+                        </div>
+                        <div class="col-lg-10">
+                            <table class="table table-hover table-primary">
+                                <thead class="table-danger">
+                                <tr>
+                                    <th>STUDENT ID</th>
+                                    <th>STUDENT NAME</th>
+                                    <th>ACTION</th>
+                                </tr>
+                                </thead>
 
-                                <div class="form-group">
-                                <h5>Exam Type</h5>
-                                <select class="form-control" name="examType" id="examType">
-                                    <option> Quiz </option>
-                                    <option> Written </option>
-                                    <option> Objective </option>
-                                </select>
-                                </div>
-
-
-                                <div class="form-group">
-                                <h5>Exam Name</h5>
-                                <select class="form-control" name="examName" id="examName">
-                                    <option> Quiz 1 </option>
-                                    <option> Quiz 2 </option>
-                                    <option> Quiz 3 </option>
-                                    <option> Written </option>
-                                    <option> Objective</option>
-                                </select>
-                                </div>
-
-                                <div class="form-group">
-                                    <h5> Course Id</h5>
-                                    <input type="number" class="form-control" id="courseId" name="course" placeholder="enter courseId">
-                                </div>
-
-                                <div class="form-group">
-                                    <h5> UserId </h5>
-                                    <input type="number" class="form-control" id="userId" name="user" placeholder="enter userId" required="">
-                                </div>
-
-                                <div class="form-group">
-                                    <h5> Marks</h5>
-                                    <input type="number" class="form-control" id="marksId" name="marks" placeholder="enter marks">
-                                </div>
-                                <button type="submit" class="btn btn-primary">upload</button>
-                            </form>
+                                <tbody>
+                                    <tr>
+                                        <th>8001</th>
+                                        <th>Student Name</th>
+                                        <th>
+                                            <a href="student_info_edited.html" class="btn btn-warning">Edit/View</a>
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <th>8002</th>
+                                        <th>Student Name</th>
+                                        <th>
+                                            <a href="student_info_edited.html" class="btn btn-warning">Edit/View</a>
+                                        </th>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
