--- a/views/view_course/view_course.ejs
+++ b/views/view_course/view_course.ejs
@@ -66,7 +66,7 @@
                         <i class="fas fa-users"></i> <a href="/notice_upload">Notice Upload</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="/marks_entry">Create Marks</a>
+                        <i class="fas fa-users"></i> <a href="/mark">Create Marks</a>
                     </li>
                     <li>
                         <i class="fas fa-hands-helping"></i> <a href="/alert_parent">Alert Parents</a>
