--- a/views/create_course/create_course.ejs
+++ b/views/create_course/create_course.ejs
@@ -113,6 +113,13 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <h5> Subject </h5>
+                                     <input type="text" class="form-control" id="subject"
+                                     name="subject" >
+                                 </div>
+
+
+                                <div class="form-group">
                                     <h5> Fees</h5>
                                     <input type="number" class="form-control" id="fees" name="fees" placeholder="enter fees">
                                 </div>
