--- a/views/noticeup/notice_upload.ejs
+++ b/views/noticeup/notice_upload.ejs
@@ -26,7 +26,7 @@
                         <a href="" class="btn-primary"><i class="fas fa-bell"></i></a>
                     </li>
                     <li>
-                        <a href="index.html" class="n-btn"> Logout </a>
+                        <a href="/logout" class="n-btn"> Logout </a>
                     </li>
                 </ul>
             </nav>
@@ -83,12 +83,12 @@
                             <form class="form" action="#" method="post">
                                 <div class="form-group">
                                     <label for="topic" class="font-weight-bold">Topic</label>
-                                    <input type="text" class="form-control" id="topic" placeholder="enter topic">
+                                    <input type="text" class="form-control" id="topic" name="topic" placeholder="enter topic">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="exampleFormControlTextarea1" class="font-weight-bold">Details</label>
-                                    <textarea class="form-control" id="details" rows="6" placeholder="write something" ></textarea>
+                                    <textarea class="form-control" id="details" name="details" rows="6" placeholder="write something" ></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-primary" >Upload</button>
                             </form>
