--- a/views/noteup/notes_upload.ejs
+++ b/views/noteup/notes_upload.ejs
@@ -81,19 +81,19 @@
                             <h1>Notes Upload</h1>
                         </div>
                         <div class="col-lg-5">
-                            <form class="form" action="#" method="post">
+                            <form class="form" action="#" method="post" enctype="multipart/form-data">
                                 <div class="form-group">
                                 <h5 class="mt-3">Course Id</h5>
                                 <select class="form-control" name="courseType" id="courseType">
-                                    <option> 1001 </option>
-                                    <option> 1002 </option>
-                                    <option> 1003 </option>
+                                    <% for(var i=0; i < results.length; i++){ %>
+                                    <option> <%= results[i].cid %> </option>
+                                    <%  } %>
                                 </select>
                                 </div>
 
                                 <div class="form-group">
                                 <h5>File</h5>
-                                <input type="file" class="form-control">
+                                <input type="file" class="form-control" name="fileForUp">
                                 </div>
                                 <button type="submit" class="btn btn-info">Upload</button>
                          </form>
