--- a/views/alert_parent/alert_parent.ejs
+++ b/views/alert_parent/alert_parent.ejs
@@ -88,23 +88,18 @@
                                     <th>ACTION</th>
                                 </tr>
                                 </thead>
-
+                                <% for(var i=0; i < results.length; i++){ %>
                                 <tbody>
                                     <tr>
-                                        <th>8001</th>
-                                        <th>Student 1</th>
+                                        <th><%= results[i].sid %></th>
+                                        <th><%= results[i].sname %></th>
                                         <th>
-                                            <a href="alert_parent_msg.html" class="btn btn-dark">Message</a>
+                                            <a href="/msg" class="btn btn-dark">Message</a>
                                         </th>
                                     </tr>
-                                    <tr>
-                                        <th>8002</th>
-                                        <th>Student 2</th>
-                                        <th>
-                                            <a href="alert_parent_msg.html" class="btn btn-dark">Message</a>
-                                        </th>
-                                    </tr>
+                                    
                                 </tbody>
+                                <%  } %>
                             </table>
                         </div>
                     </div>
