--- a/views/signup/register.ejs
+++ b/views/signup/register.ejs
@@ -99,7 +99,8 @@
                         <input type="number" class="form-control" id="PPhoneNumber" placeholder="Phone Number"
                         name="PPhoneNumber" >
                     </div>
-                    <a href="login.html" class="btn btn-info"> Submit</a>
+                    <!-- <a href="/signup" class="btn btn-info"> Submit</a> -->
+                    <input type="submit" value="Submit">
             </form>
             </div>
             </div>
