--- a/views/view_course/view_course.ejs
+++ b/views/view_course/view_course.ejs
@@ -107,7 +107,9 @@
                                             <th>   <input type="text" class="form-control" name="fees" id="fees" placeholder="" VALUE="<%= results[i].fees %>"></th>
                                             <th>
                                                 <input class="btn btn-warning"type="submit" value="edit" >
-                                                <a href="" class="btn btn-danger">Delete</a>
+                                                <a href="view_course/delete/<%= results[i].cid %>" class="btn btn-danger">Delete</a>
+                                                <!-- <input class="btn btn-warning"type="submit" value="Delete" > -->
+                                              
                                             </th>
                                         </tr>
                                     </form>
