--- a/views/signup/teacher_reg.ejs
+++ b/views/signup/teacher_reg.ejs
@@ -61,7 +61,7 @@
                                 
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email</label>
-                                <input type="text" class="form-control" id="email" placeholder="Enter Email Address"
+                                <input type="email" class="form-control" id="email" placeholder="Enter Email Address"
                                 name="email">
                             </div>
 
@@ -81,7 +81,7 @@
                                 <label for="qualification_details">Qualification</label><br>
                                 <textarea name="qualification_details" id="" cols="50" rows="10"></textarea>
                             </div>
-                            <input type="submit" value="Submit">
+                            <input type="submit" value="Sign Up">
                     </form>
                 </div>
             </div>
