--- a/views/alert_parent/alert_parent.ejs
+++ b/views/alert_parent/alert_parent.ejs
@@ -20,7 +20,7 @@
                 </div>
                 <ul>
                     <li>
-                        <h5>Teacher Name</h5>
+                        <h5>Teacher Name:  <%= results[0].tname %></h5>
                     </li>
                     <li>
                         <a href="" class="btn-primary"><i class="fas fa-bell"></i></a>
@@ -48,7 +48,7 @@
                         <i class="fas fa-users"></i> <a href="/view_course">View Course</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a>
+                        <!-- <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a> -->
                     </li>
                     <li>
 
