--- a/views/dashbord/teacher_dashboard.ejs
+++ b/views/dashbord/teacher_dashboard.ejs
@@ -48,7 +48,7 @@
                         <i class="fas fa-users"></i> <a href="/view_course">View Course</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a>
+                        <!-- <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a> -->
                     </li>
                     <li>
 
