--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -59,7 +59,7 @@
                           <label for="pass">Password</label>
                           <input type="password" class="form-control" id="pass" placeholder="Password" name="password">
                         </div>
-                        <input type="submit" class="btn btn-dark" namr="login" placeholder="Login">
+                        <input type="submit" class="btn btn-dark" namr="login" placeholder="Login" value="Login">
                     </form>
                 </div>
             </div>
