--- a/views/marks/marks_entry.ejs
+++ b/views/marks/marks_entry.ejs
@@ -48,7 +48,7 @@
                         <i class="fas fa-users"></i> <a href="/view_course">View Course</a>
                     </li>
                     <li>
-                        <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a>
+                        <!-- <i class="fas fa-users"></i> <a href="/approve_student">Approve Student</a> -->
                     </li>
                     <li>
 
@@ -106,12 +106,12 @@
 
                                 <div class="form-group">
                                     <h5> Course Id</h5>
-                                    <input type="number" class="form-control" id="courseId" name="course" placeholder="enter courseId">
+                                    <input type="text" class="form-control" id="courseId" name="courseId" placeholder="enter courseId">
                                 </div>
 
                                 <div class="form-group">
-                                    <h5> UserId </h5>
-                                    <input type="number" class="form-control" id="userId" name="user" placeholder="enter userId" required="">
+                                    <h5> Student Id </h5>
+                                    <input type="text" class="form-control" id="userId" name="user" placeholder="enter userId" required="">
                                 </div>
 
                                 <div class="form-group">
